--- a/BrandonsFirstProjectV2/BrandonsFirstProjectV2.csproj
+++ b/BrandonsFirstProjectV2/BrandonsFirstProjectV2.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>..\..\..\..\..\..\Windows\Microsoft.NET\Framework\v2.0.50727\System.Windows.Forms.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
